--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
   width: 100%;
-  min-height: 400vh;
   background-color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -219,7 +218,7 @@ body {
 
 #section2 {
   width: 100%;
-  height: 162vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -315,12 +314,14 @@ body {
     margin-top: 14%;
     flex-wrap: wrap;
   }
-
+  #section2 {
+    height: 150vh;
+  }
   .cader1,
   .cader2,
   .cader3 {
     width: 250px;
-    height: 45vh;
+    height: 75vh;
   }
   .cader1 img,
   .cader2 img,
@@ -359,16 +360,29 @@ body {
   }
 }
 @media screen and (max-width: 800px) {
-  .cader1,
-  .cader2,
-  .cader3 {
-    height: 45vh;
+  #section2 {
+    height: 150vh;
   }
+  .cader1, .cader2, .cader3 {
+    height: 64vh;
+}
 }
 
 #section3 {
   width: 100%;
-  height: 67vh;
+  /* height: 60vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+
+#section3 img {
+  max-width: 367px;
+}
+.cont-phone {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -377,9 +391,22 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
 }
-
-#section3 img {
-  max-width: 367px;
+#section3 h1 {
+  font-size: xx-large;
+  font-weight: 300;
+  margin: 35px 0;
 }
 
-
+footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-container {
+  width: 90%;
+  height: 65vh;
+  background-color: #f5f5f5;
+  border-radius: 25px;
+}
