--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ body {
   outline: none;
   border: none;
   color: #a5a5a5;
+  background-color: transparent;
 }
 .div-too button {
   width: 130px;
@@ -363,9 +364,11 @@ body {
   #section2 {
     height: 150vh;
   }
-  .cader1, .cader2, .cader3 {
+  .cader1,
+  .cader2,
+  .cader3 {
     height: 64vh;
-}
+  }
 }
 
 #section3 {
@@ -406,7 +409,44 @@ footer {
 }
 .footer-container {
   width: 90%;
-  height: 65vh;
+  height: 55vh;
   background-color: #f5f5f5;
-  border-radius: 25px;
+  border-radius: 25px 25px 0px 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  padding-top: 7%;
+}
+.ele-lift {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 45px;
+}
+.logo img {
+  max-width: 200px;
+}
+.ele-right {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+.ele-right ul {
+  list-style-type: none;
+  line-height: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+.ele-right ul h4 {
+  margin-bottom: 20px;
+}
+.ele-right ul li {
+  margin-bottom: 5px;
+  font-weight: 100;
 }
